# aiworker

./: .gitignore  Cargo.toml  rust-toolchain.toml
common/: Cargo.toml
common/src/: client.rs  error.rs  lib.rs  model.rs
common/src/types/: chat.rs  image.rs  impls.rs  mod.rs
examples/chat-stream/: Cargo.toml
examples/chat-stream/src/: main.rs
examples/structured-jsonish/: Cargo.toml
examples/structured-jsonish/src/: main.rs
jsonwithpartial/: Cargo.toml
jsonwithpartial/src/: lib.rs
jsonwithpartial/src/jsonish/: mod.rs
