[workspace]
resolver = "2"
members = ["jsonwithpartial"]


[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.75"
base64 = "0.22.1"
# cfg-if = "1.0.0"
# derive_more = { version = "0.99.18", features = ["constructor"] }
# bon = "3.3.2"
reqwest = { version = "0.12.12", features = [
  "json",
  "native-tls-vendored",
  "native-tls-alpn",
  "stream",
] }
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
regex = "1.10.4"

[profile.dev]
lto = false


[profile.release]
lto = true


