[workspace]
resolver = "2"
members = [ "common","jsonwithpartial", "llm_clients", "examples/*"]


[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.75"
base64 = "0.22.1"
futures = "0.3.31"
rand = "0.8.5"
thiserror = "2.0"
bytes = "1.9.0"
backoff = { version = "0.4.0", features = ["tokio"] }

# cfg-if = "1.0.0"
derive_more = { version = "0.99.18", features = ["constructor"] }
derive_builder = "0.20.2"
# bon = "3.3.2"
reqwest = { version = "0.12.12", features = [
  "json",
  "native-tls-vendored",
  "native-tls-alpn",
  "stream",
  "multipart"
] }
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
regex = "1.10.4"
indexmap = "2.0.0"

tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["codec", "io-util"] }


eventsource-stream = "0.2.3"
reqwest-eventsource = "0.6.0"
schemars = "0.8.12"

#
# workspace member crates
#
json_partial = {path = "./jsonwithpartial"}
common = {path = "./common"}

[profile.dev]
lto = false


[profile.release]
lto = true


