[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest.workspace = true
serde.workspace = true
base64.workspace = true
futures.workspace = true
rand.workspace = true
serde_json.workspace = true
derive_builder.workspace = true
thiserror.workspace = true
bytes.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
eventsource-stream.workspace = true
reqwest-eventsource.workspace = true
backoff.workspace = true
secrecy = { version = "0.10.3", features = ["serde"] }